# nonebot-plugin-callapi

./: README.md  pyproject.toml
nonebot_plugin_callapi/: __init__.py  __main__.py
