[project]
name = "nonebot-plugin-callapi"
dynamic = ["version"]
description = "Use bot command to call its API"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.1",
    "nonebot-plugin-alconna>=0.54.2",
    "Pygments>=2.19.1",
    "pil-utils>=0.2.2",
    "cookit[pyd]>=0.9.3",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-callapi"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_callapi/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
