[project]
name = "nonebot-plugin-callapi"
dynamic = ["version"]
description = "Use bot command to call its API"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.4.3",
    "nonebot-plugin-alconna>=0.59.4",
    "Pygments>=2.19.2",
    "pil-utils>=0.2.2",
    "cookit[pyd]>=0.13.0",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-callapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "nonebot_plugin_callapi/__init__.py"
